# build-an-agent

./: .env.example  .gitignore  LICENSE  README.md  llm.py  pyproject.toml  pyrightconfig.json  setup.md
part-1-build-an-agent/: 01-raw-agent.ipynb  02-langgraph-agent.ipynb  README.md  products.json  tools.py
part-2-agentic-rag/: 01-rag-agent.ipynb  README.md
part-2-agentic-rag/catalog/: FTW-001.md  FTW-002.md  HYD-001.md  JKT-001.md  JKT-002.md  JKT-003.md  LGT-001.md  NAV-001.md  SLP-001.md  TNT-001.md  TRL-001.md  TRL-002.md
part-3-evaluation-guardrails/: 01-evaluation.ipynb  README.md  eval_dataset.json
